--- a/src/Lab4.Presentation/Lab4.Presentation.csproj
+++ b/src/Lab4.Presentation/Lab4.Presentation.csproj
@@ -4,4 +4,8 @@
         <RootNamespace>Itmo.ObjectOrientedProgramming.Lab4.Presentation</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Lab4.Core\Lab4.Core.csproj" />
+    </ItemGroup>
+
 </Project>
