--- a/src/Lab5/Lab5.csproj
+++ b/src/Lab5/Lab5.csproj
@@ -4,4 +4,15 @@
         <RootNamespace>Itmo.ObjectOrientedProgramming.Lab5</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" />
+      <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+      <PackageReference Include="Swashbuckle.AspNetCore" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="API\Properties\" />
+    </ItemGroup>
+
 </Project>
